# path_smoothing

./: .gitignore  CMakeLists.txt  README.md  astar_path.csv  mainpage.dox  package.xml  path.csv  sas_path.txt  smoothing_test.jl
cfg/: smoothing_demo.params
config/: config.yaml  param.cfg
demo/: CMakeLists.txt  a_star_path.csv  csv_reader.hpp  simple_curve_plot.py  smooth_result.csv  smooth_result1.csv  smooth_with_obstacle_demo.cpp  smooth_without_obstacle_demo.cpp  smooth_without_obstacle_result.csv  test_steepest_decent.cpp
include/non_constrained_optimiztion/: eigen_typedef.hpp  gradient_problem.hpp  gradient_problem_options.hpp  gradient_problem_solve.hpp  line_search_direction.hpp  line_search_minimizer.hpp  line_search_step_length.hpp  matplotlibcpp.h  minimizer.hpp  polynomial.hpp  summary.hpp  type.hpp
include/path_smoothing/: cg_smoothing_function.hpp  cg_solver.h  chomp.hpp  distance_function.hpp  drivable_region_node.h  evaluator.hpp  obstacle_factor.hpp  path_smoothing-in.hpp  path_smoothing.hpp  path_smoothing_old.h  path_smoothing_type.hpp  path_smoothing_unit.hpp
include/tiny_spline/: tinysplinecpp.h
launch/: path_smoothing.launch  smooth_with_ostacle_demo.launch
rviz/: path_smooth.rviz  smooth_demo.rviz
src/: cg_solver.cpp  chomp.cpp  drivable_region_node.cpp  path_smooth_demo_node.cpp  path_smoothing.cpp
src/non_constrained_optimiztion/: gradient_problem_solve.cpp  line_search_direction.cpp  line_search_minimizer.cpp  line_search_step_length.cpp  minimize.cpp  path_smoothing_type.cpp  plot_step_length_function.cpp  polynomial.cpp
src/path_smoothing/: cg_smoothing_function.cpp  evaluator.cpp  non_derivative_method.cpp  non_derivative_smoothing.cpp  path_smoothing.cpp  path_smoothing_unit.cpp
src/tiny_spline/: tinyspline.c  tinysplinecpp.cpp
test/: gpmp2_smooth_demo.cpp  path_for_debug.csv  smooth_result.csv  smooth_with_obstacle_demo.cpp  smooth_without_obstacle_demo.cpp  test_path_smoothing.cpp  test_steepest_decent.cpp
