<?xml version="1.0"?>
<package format="2">
  <name>path_smoothing</name>
  <version>0.0.0</version>
  <description>The path_smoothing package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="yangt@todo.todo">yangt</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>opt_utils</depend>
  <depend>roslib</depend>
  <depend>internal_grid_map</depend>
  <depend>nav_msgs</depend>
  <depend>grid_map_visualization</depend>
  <depend>visualization_msgs</depend>
  <depend>rosparam_handler</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>grid_map_core</depend>
  <depend>voronoi</depend>
  <depend>tinyspline</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
